[tool.poetry]
name = "practice fastapi"
version = "0.1.0"
description = "Practice FastAPI with poetry, black, isort, pre-commit and Makefile"
authors = ["금빈"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.0"
makefile = "^1.1.0"
sqlalchemy = "^2.0.7"
pymysql = "^1.0.2"
mysql = "^0.0.3"
pydantic = "^1.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
